<resources>
    <string name="app_name">GarasiKu</string>
    <string name="nav_dashboard">Beranda</string>
    <string name="nav_vehicles">Garasi</string>
    <string name="nav_service">Servis</string>
    <string name="nav_statistics">Biaya</string>
    <string name="nav_settings">Profil</string>
    <string name="nav_notifications">Notifikasi</string>
    <string name="action_add_record">Tambah catatan</string>
    <string name="action_add_vehicle">Tambah kendaraan</string>
...
    <string name="dashboard_vehicle_photo_placeholder">Foto belum tersedia</string>
    <string name="dashboard_odometer_value">%1$,d km</string>
    <string name="dashboard_vehicle_year_plate">%1$s - %2$s</string>
    <string name="dashboard_due_odometer">Pada %1$,d km</string>
    <string name="dashboard_metric_not_ready">Belum dicatat</string>
    <string name="dashboard_error_title">Data dashboard belum bisa dimuat</string>
    <string name="content_desc_dashboard">Buka dashboard</string>
    <string name="content_desc_vehicles">Buka kendaraan</string>
    <string name="content_desc_service">Buka servis</string>
    <string name="content_desc_statistics">Buka statistik</string>
    <string name="content_desc_settings">Buka profil</string>
    <string name="content_desc_notifications">Buka notifikasi</string>
</resources>




